--- a/src/assets/styles/rewrite.scss
+++ b/src/assets/styles/rewrite.scss
@@ -89,12 +89,22 @@ $thead-bg: $color-bg-light;
   }
 }
 
-// ::v-deep .node-none {
-//   display: none;
-// }
-// :deep(.node-none) {
-//   display: none;
-// }
+/**
+* 处理  input 设置了clearable， focus的时候，输入框宽度会变成长的样式问题
+* @link 参照：https://blog.csdn.net/supming1/article/details/130074905
+*/
+.el-input__wrapper {
+  position: relative;
+  .el-input__inner {
+    padding-right: 18px;
+  }
+  .el-input__suffix {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
 
 .el-popconfirm__main {
   width: max-content;
@@ -124,3 +134,10 @@ $thead-bg: $color-bg-light;
   overflow: auto;
   border-radius: $radius-main;
 }
+
+// ::v-deep .node-none {
+//   display: none;
+// }
+// :deep(.node-none) {
+//   display: none;
+// }
