--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -403,6 +403,12 @@ input:-webkit-autofill {
 
 /**
 * 弹性布局类
+* f-sb-c       x轴两端对齐(space-between)，y轴垂直居中(center) 
+* f-sb-s-c     在列方向的前提下(column)，x轴占满(stretch)，y轴两端对齐(space-between)
+* f-sb-fs-w    x轴两端对齐(space-between)，y轴从上到下依次排列(flex-start)，占满一行自动换行(wrap)
+* f-sb-fs-w-c  x轴两端对齐(space-between)，y轴从上到下依次排列(flex-start)，占满一行自动换行(wrap)，多个行在y轴上居中(center)
+* 使用说明文档（gitee）：http://fanlichuan.gitee.io/produce/flex-layout/index.html
+* 使用说明文档（github）：https://1583187609.github.io/produce/flex-layout/index.html
 */
 $justifyContent: (
   fs: flex-start,
@@ -423,12 +429,12 @@ $flexDirection: (
   c: column,
   // r: row,
   // rr: row-reverse,
-  // cr: column-reverse,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  // cr: column-reverse,
 );
 $flexWrap: (
   w: wrap,
   // n: nowrap,
-  // wr: wrap-reverse,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  // wr: wrap-reverse,
 );
 //下面的太多了，且用的少，故不生成
 // $alignContent: (
