--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -423,12 +423,12 @@ $flexDirection: (
   c: column,
   // r: row,
   // rr: row-reverse,
-  // cr: column-reverse,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  // cr: column-reverse,
 );
 $flexWrap: (
   w: wrap,
   // n: nowrap,
-  // wr: wrap-reverse,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  // wr: wrap-reverse,
 );
 //下面的太多了，且用的少，故不生成
 // $alignContent: (
