--- a/.vitepress/styles/index.scss
+++ b/.vitepress/styles/index.scss
@@ -1,6 +1,12 @@
-// vitepress 的样式
+/**
+* @link 全局css变量 https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
+*/
 :root {
+  // --vp-sidebar-width: 2100x; //左侧边栏的宽度
+  --vp-layout-max-width: 100vw;
+
   // 主题色
+  // --vp-c-brand-1: red; // $color-primary;
   // --vp-c-brand-1: $color-primary;
 
   // 自定义 hero 的 name 的颜色
@@ -46,6 +52,15 @@
 //     }
 //   }
 // }
+
+.VPDoc {
+  &.has-aside {
+    // 中间区域不要设置最大宽度
+    .content-container {
+      max-width: none !important;
+    }
+  }
+}
 
 // 中间内容区域
 .VPContent {
