feat: 基本调整完成

--- a/.vitepress/styles/index.scss
+++ b/.vitepress/styles/index.scss
@@ -53,6 +53,13 @@
 //   }
 // }
 
+.vp-doc {
+  h2 {
+    border-top: none;
+    margin: $gap-two 0 $gap;
+  }
+}
+
 .VPDoc {
   &.has-aside {
     // 中间区域不要设置最大宽度
