--- a/src/assets/styles/_var.module.scss
+++ b/src/assets/styles/_var.module.scss
@@ -5,6 +5,11 @@
   // dialog 相关
   dialogTop: $dialog-top; // 距离浏览器顶部的距离
 
+  // 间距相关
+  gapSmall: $gap-small;
+  gapDefault: $gap-default;
+  gapLarge: $gap-large;
+
   //layout颜色
   navBgDark: $nav-bg-dark;
   navBgDark-heavy: $nav-bg-dark-heavy;
