--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -12,6 +12,9 @@ $asider-width: 160px;
 $main-menu-width: 60px;
 $page-tags-height: 32px;
 
+$gap-small: 4px;
+$gap-default: 6px;
+$gap-large: 10px;
 // 间距相关
 $gap-qtr: 4px;
 $gap-half: 8px;
