feat: 完善编辑表格

--- a/.vitepress/styles/index.scss
+++ b/.vitepress/styles/index.scss
@@ -8,6 +8,7 @@
 
   // 主题色
   --vp-c-brand-1: #ff8000;
+  // --vp-button-brand-bg: #ff8000;
 
   // 自定义 hero 的 name 的颜色
   //   --vp-home-hero-name-color: blue;
