--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -215,7 +215,7 @@ video {
   // font-size: 100%;
   box-sizing: border-box;
   vertical-align: baseline;
-  overscroll-behavior: none; //none 当在子盒子内滚动到底部时，不触发父盒子的滚动
+  overscroll-behavior: none; //默认：auto。none 当在子盒子内滚动到底部时，不触发父盒子的滚动
   outline: none; //去掉谷歌浏览器的某些标签难看的外边框
 }
 article,
@@ -429,12 +429,12 @@ $flexDirection: (
   c: column,
   // r: row,
   // rr: row-reverse,
-  // cr: column-reverse,,,
+  // cr: column-reverse,,,,
 );
 $flexWrap: (
   w: wrap,
   // n: nowrap,
-  // wr: wrap-reverse,,,
+  // wr: wrap-reverse,,,,
 );
 //下面的太多了，且用的少，故不生成
 // $alignContent: (
