--- a/src/assets/styles/_var.module.scss
+++ b/src/assets/styles/_var.module.scss
@@ -35,14 +35,14 @@
   // colorBgHeavyer: $color-bg-heavyest;
   // colorBgHeavy: $color-bg-heavyer;
   // colorBgMain: $color-bg-heavy;
-  // colorBgLight: $color-bg-light;
+  colorBgLight: $color-bg-light;
   // colorBgLighter: $color-bg-lighter;
   colorBgWhite: $color-bg-white;
 
   // //边框圆角
   // radiusHeavyer: $radius-heavyer;
   // radiusHeavy: $radius-heavy;
-  // radiusMain: $radius-main;
+  radiusMain: $radius-main;
   // radiusLight: $radius-light;
   // radiusLighter: $radius-lighter;
   // //高度
