--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -384,10 +384,10 @@ input:-webkit-autofill {
 // :hover {
 //   // transition: all 0.3s;
 // }
-
+$prefix: q;
 //多行文本省略(下面的注释不能删除，否则中间的那行代码将不会被保存编译到css文件里面）
 @for $i from 1 through 5 {
-  .line-#{$i} {
+  .#{$prefix}-line-#{$i} {
     overflow: hidden;
     text-overflow: ellipsis;
     // 当英文单词很长时的换行处理
@@ -429,12 +429,12 @@ $flexDirection: (
   c: column,
   // r: row,
   // rr: row-reverse,
-  // cr: column-reverse,,,,,,
+  // cr: column-reverse,,
 );
 $flexWrap: (
   w: wrap,
   // n: nowrap,
-  // wr: wrap-reverse,,,,,,
+  // wr: wrap-reverse,,
 );
 //下面的太多了，且用的少，故不生成
 // $alignContent: (
