--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -321,6 +321,7 @@ input:-webkit-autofill {
 }
 //当鼠标放上去时才显示滚动条，否则隐藏滚动条
 .hover-show-scroll {
+  overflow: auto;
   &::-webkit-scrollbar-thumb {
     box-shadow: none;
     background: transparent;
@@ -342,6 +343,7 @@ input:-webkit-autofill {
 }
 //总是隐藏滚动条
 .all-hide-scroll::-webkit-scrollbar {
+  overflow: auto;
   display: none;
 }
 
@@ -429,12 +431,12 @@ $flexDirection: (
   c: column,
   // r: row,
   // rr: row-reverse,
-  // cr: column-reverse,,
+  // cr: column-reverse,,,,,
 );
 $flexWrap: (
   w: wrap,
   // n: nowrap,
-  // wr: wrap-reverse,,
+  // wr: wrap-reverse,,,,,
 );
 //下面的太多了，且用的少，故不生成
 // $alignContent: (
