--- a/src/assets/styles/rewrite.scss
+++ b/src/assets/styles/rewrite.scss
@@ -86,7 +86,7 @@ $thead-bg: $color-bg-light;
   color: $color-info;
 }
 
-.page-view {
+.q-page-view {
   height: 100%;
   width: 100%;
   padding: $gap-half;
