--- a/src/assets/styles/_var.scss
+++ b/src/assets/styles/_var.scss
@@ -1,5 +1,7 @@
 @use "sass:color";
 
+$disabled-bg: var(--disabled-bg);
+
 // dialog 相关
 $dialog-top: var(--dialog-top);
 
@@ -16,11 +18,6 @@ $main-menu-width: var(--main-menu-width); // large:80px default:70px small:60px
 $page-tags-height: var(--page-tags-height); // large:44px default:40px small:36px
 
 // 间距相关
-// $gap-qtr: 4px;
-// $gap-half: 8px;
-// $gap: 16px;
-// $gap-one-half: 24px;
-// $gap-two: 32px;
 $gap-qtr: var(--gap-qtr);
 $gap-half: var(--gap-half);
 $gap-half-qtr: var(--gap-half-qtr);
@@ -45,13 +42,13 @@ $color-text-lighter: var(--color-text-lighter);
 $color-text-lightest: var(--color-text-lightest); // 禁用、placeholder的颜色
 
 // 背景颜色
-$color-bg-heavyest: var(--color-bg-heavyest); // color.mix($color-primary, #ffffff, 30%);
-$color-bg-heavyer: var(--color-bg-heavyer); // color.mix($color-primary, #ffffff, 25%);
-$color-bg-heavy: var(--color-bg-heavy); // color.mix($color-primary, #ffffff, 20%);
-$color-bg-main: var(--color-bg-main); // color.mix($color-primary, #ffffff, 15%);
-$color-bg-light: var(--color-bg-light); // color.mix($color-primary, #ffffff, 10%);
-$color-bg-lighter: var(--color-bg-lighter); // color.mix($color-primary, #ffffff, 5%);
-$color-bg-white: var(--color-bg-white); // #f5f5f5
+$color-bg-heavyest: color-mix(in srgb, var(--color-primary) 30%, #ffffff 70%); // color.mix($color-primary, #ffffff, 30%);
+$color-bg-heavyer: color-mix(in srgb, var(--color-primary) 25%, #ffffff 75%); // color.mix($color-primary, #ffffff, 25%);
+$color-bg-heavy: color-mix(in srgb, var(--color-primary) 20%, #ffffff 80%); // color.mix($color-primary, #ffffff, 20%);
+$color-bg-main: color-mix(in srgb, var(--color-primary) 15%, #ffffff 85%); // color.mix($color-primary, #ffffff, 15%);
+$color-bg-light: color-mix(in srgb, var(--color-primary) 10%, #ffffff 90%); // color.mix($color-primary, #ffffff, 10%);
+$color-bg-lighter: color-mix(in srgb, var(--color-primary) 5%, #ffffff 95%); // color.mix($color-primary, #ffffff, 5%);
+$color-bg-white: var(--color-bg-white);
 
 // 边框颜色
 $color-border-heavyer: var(--color-border-heavyer);
@@ -61,11 +58,11 @@ $color-border-light: var(--color-border-light);
 $color-border-lighter: var(--color-border-lighter);
 
 // 边框简写
-$border-heavyer: var(--color-border-heavyer);
-$border-heavy: var(--color-border-heavy);
-$border-main: var(--border-main);
-$border-light: var(--color-border-light);
-$border-lighter: var(--color-border-lighter);
+$border-heavyer: 1px solid var(--color-border-heavyer);
+$border-heavy: 1px solid var(--color-border-heavy);
+$border-main: 1px solid var(--color-border-main);
+$border-light: 1px solid var(--color-border-light);
+$border-lighter: 1px solid var(--color-border-lighter);
 
 // 边框圆角
 $radius-heavyer: var(--radius-heavyer);
