--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -15,17 +15,19 @@ $breakpoints: (
   "xl": "(min-width: #{$xl})",
 ) !default;
 // $gap-half-qtr: 12px;
+// #EE1C25(红) #ff8000(橙) #e7bb38(黄) #00cc33(绿) #409EFF(蓝) purple(紫) #ffb7c5(粉)
+$current-color-primary: #ff8000;
 @forward "element-plus/theme-chalk/src/common/var.scss" with (
   $colors: (
     // "white": #ffffff,
     // "black": #000000,
     // 因为ElementPlus 底层用到了 color.mix 运算，所以不能够直接使用 $color-primary 变量
-    "primary": ("base": #ff8000),
+    "primary": ("base": $current-color-primary),
     // "success": ("base": #67c23a),
     // "warning": ("base": #e6a23c),
     // "danger": ("base": #f56c6c),
     // "error": ("base": #f56c6c),
-    // "info": ("base": #909399),,,,
+    // "info": ("base": #909399),
   ),
 
   $text-color: (
@@ -46,11 +48,12 @@ $breakpoints: (
   $fill-color: (
     // '': #f0f2f5,
     "light": $color-bg-lighter,
+    // #f5f7fa
     // 'lighter': #fafafa,
     // 'extra-light': #fafcff,
     // 'dark': #ebedf0,
     // 'darker': #e6e8eb,
-    // 'blank': #ffffff,,,
+    // 'blank': #ffffff,,
   ),
   // // Background
   // $bg-color:
@@ -65,7 +68,7 @@ $breakpoints: (
       "base": $radius-main,
       "small": $radius-lighter,
       // 'round': 20px,
-      // 'circle': 100%,,,,,
+      // 'circle': 100%,,,,
     ),
   // // Box-shadow
   $box-shadow:
@@ -98,12 +101,12 @@ $breakpoints: (
   //     'popper': 2000,
   //   ),
   // // Disable default
-  // $disabled:
-  //   (
-  //     'bg-color': getCssVar('fill-color', 'light'),
-  //     'text-color': getCssVar('text-color', 'placeholder'),
-  //     'border-color': getCssVar('border-color', 'light'),
-  //   ),
+  $disabled:
+    (
+      "bg-color": $disabled-bg,
+      // "text-color": getCssVar("text-color", "placeholder"),
+      // "border-color": getCssVar("border-color", "light"),,,,,
+    ),
   // $common-component-size:
   //   (
   //     "large": 40px,
@@ -138,7 +141,7 @@ $breakpoints: (
       // "bg-color": getCssVar("fill-color", "blank"),
       // "input-border": getCssVar("border"),
       // "disabled-border-color": getCssVar("border-color"),
-      // "disabled-input-fill": getCssVar("fill-color", "light"),
+      "disabled-input-fill": $disabled-bg,
       // "disabled-icon-color": getCssVar("text-color-placeholder"),
       // "disabled-checked-input-fill": getCssVar("border-color-extra-light"),
       // "disabled-checked-input-border-color": getCssVar("border-color"),
@@ -147,7 +150,7 @@ $breakpoints: (
       // "checked-input-border-color": getCssVar("color-primary"),
       // "checked-bg-color": getCssVar("color-primary"),
       // "checked-icon-color": getCssVar("color", "white"),
-      // "input-border-color-hover": getCssVar("color-primary"),,,,
+      // "input-border-color-hover": getCssVar("color-primary"),,,
     ),
   // $checkbox-button:
   //   (
@@ -180,7 +183,7 @@ $breakpoints: (
       // 'input-bg-color': getCssVar('fill-color', 'blank'),
       // 'input-border': getCssVar('border'),
       // 'input-border-color': getCssVar('border-color'),
-      // 'input-border-color-hover': getCssVar('color-primary'),,,,,
+      // 'input-border-color-hover': getCssVar('color-primary'),,,,
     ),
   // $radio-height: ($common-component-size, $radio-height);
   // $radio-button:
@@ -237,7 +240,7 @@ $breakpoints: (
       // 'disabled-color': getCssVar('text-color-placeholder'),
       "height": $height-light,
       // 'hover-background': getCssVar('fill-color', 'light'),
-      // 'selected-text-color': getCssVar('color-primary'),,,,
+      // 'selected-text-color': getCssVar('color-primary'),,,
     ),
   $select-group: (
     // 'text-color': getCssVar('color-info'),
@@ -318,7 +321,7 @@ $breakpoints: (
       // "padding": $gap-half-qtr $gap,
       "close-size": $font-size-heavy,
       // 'close-icon-color': getCssVar('text-color-placeholder'),
-      // 'close-hover-color': getCssVar('text-color-secondary'),,,,,,,
+      // 'close-hover-color': getCssVar('text-color-secondary'),
     ),
   // // Notification
   // // css3 var in packages/theme-chalk/src/notification.scss
@@ -342,7 +345,7 @@ $breakpoints: (
       "title-font-size": $font-size-heavy,
       // 'title-color': getCssVar('text-color-primary'),
       // 'close-color': getCssVar('text-color-secondary'),
-      // 'close-hover-color': getCssVar('text-color-regular'),,,,,,
+      // 'close-hover-color': getCssVar('text-color-regular'),,,,,
     ),
   // // Input
   // // css3 var in packages/theme-chalk/src/input.scss
@@ -551,7 +554,7 @@ $breakpoints: (
       "font-size": $font-size-light,
       // 'color': getCssVar('text-color-secondary'),
       // 'active-color': getCssVar('color-primary'),
-      // 'marker-bg-color': getCssVar('color-primary'),,,,,,
+      // 'marker-bg-color': getCssVar('color-primary'),,,,,
     ),
   // // Segmented
   // // css3 var in packages/theme-chalk/src/segmented.scss
